--- a/package.json
+++ b/package.json
@@ -9,17 +9,15 @@
   "author": "cool-dev-guy",
   "license": "GPLv3",
   "dependencies": {
-    "@sparticuz/chromium": "^119.0.2",
-    "puppeteer-core": "^21.5.1",
-    "puppeteer-extra": "^3.3.6",
-    "puppeteer-extra-plugin-stealth": "^2.11.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20.10.6",
-    "typescript": "^5.3.3"
-  },
-  "engines": {
-    "node": "18"
+    "@sparticuz/chromium":"",
+    "@babel/parser": "",
+    "@babel/traverse": "",
+    "crypto-js": "",
+    "node-fetch": "",
+    "puppeteer": "",
+    "puppeteer-core": "",
+    "puppeteer-extra": "",
+    "puppeteer-extra-plugin-stealth": ""
   },
   "pkg": {
     "assets": "node_modules/puppeteer-extra-plugin-stealth/**/*.*"
